# libva-v4l2-stateful

./: .gitignore  README.md  meson.build
debian/: changelog  control  copyright
src/: buffer.c  h264.c  hevc.c  surface.c  v4l2-backend.c  vabackend.c  vabackend.h  vp8.c  vp9.c
